# full-arch-crm

./: .env  .env.example  .gitignore  .mcp.json  .replit  DEPLOYMENT_GUIDE.md  claude.md  package-lock.json  package.json  replit.md  tailwind.config.ts  vitest.config.ts
fusion_crm/: .env.example  .env.production.template  .gitignore  AGENTS.md  AI_Native_Dental_Implant_Clinic_White_Paper_v0_1.docx  CLAUDE.md  INTEGRATION_NOTES.md  Makefile  PROJECT_REPOSITORY_STRATEGY.md  README.md  SELF_LEARNING_AGENT_ARCHITECTURE.md  agent_driven_workflow_layer_whitepaper.md  ai_context_workflow_whitepaper.md  market.md  pyproject.toml
fusion_crm/.agents/: AGENTS.md  CLAUDE.md
fusion_crm/.agents/dashboard/: README.md  server.py
fusion_crm/.agents/orchestration/: AGENTS.md  CLAUDE.md  HYBRID_KICKOFF.md  PARALLEL_WORK_POLICY.md  README.md  RUNBOOK_OPERATOR.md  current
fusion_crm/.agents/strategy/: ATTRIBUTION_HANDOFF.md  CANDIDATE_MISSIONS.md  DATA_INTELLIGENCE_AGENT_LOCAL_TOOLING_MISSION_SPEC.md  FULL_FIDELITY_INGESTION_DOCTRINE.md  HANDOFF_TO_ORCHESTRATOR.md  HOUSEHOLD_IDENTITY_GROUPING_DESIGN.md  INTERACTIVE_MESSENGER_LAYER_DOCTRINE.md  LEAD_SOURCE_ATTRIBUTION_DESIGN.md  PERSON_DATA_EVENT_PROVENANCE_DOCTRINE.md  PROTOCOL.md  RAW_TO_CONTEXT_NORMALIZATION_SPEC.md  README.md  REVENUE_INTELLIGENCE_ANALYTICS_PLATFORM_PLAN.md  SEMANTIC_CONTEXT_ANALYTICS_FOUNDATION_PLAN.md  UNIFIED_PERSON_LIFECYCLE_SEMANTIC_ANALYTICS_PLAN.md  architecture-radar.md
fusion_crm/.claude/: settings.json
fusion_crm/.claude/commands/: fix-lane.md  hybrid.md  orchestrator.md  repo-steward.md  reviewer.md  strategy.md  task.md  verify.md
fusion_crm/.claude/hooks/: hooks.json
fusion_crm/.codex/: README.md
fusion_crm/.codex/commands/: reviewer.md  task.md  verify.md
fusion_crm/.github/: CLAUDE.md
fusion_crm/api/v1/: appointments.py  auth.py  clinical.py  insurance.py  intelligence.py  patients.py  router.py
fusion_crm/apps/: AGENTS.md  CLAUDE.md
fusion_crm/apps/api/: AGENTS.md  CLAUDE.md  Dockerfile  dependencies.py  main.py  middleware.py
fusion_crm/apps/portal/: AGENTS.md  CLAUDE.md
fusion_crm/apps/web/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
fusion_crm/apps/worker/: AGENTS.md  CLAUDE.md  Dockerfile  health.py  main.py
fusion_crm/docs/: DEPLOYMENT_RULES.md  DEV_WORKFLOW.md  PROVIDER_INGESTION_STRATEGY.md  ROADMAP.md  WORKFLOW.md
fusion_crm/docs/analytics/: dashboards-mapping.md  full-funnel-v2-person-anchored.md
fusion_crm/docs/architecture/: CONTEXT_ARCHITECTURE.md  GOVERNED_AGENT_LEARNING_STRATEGY.md  REVENUE_INTELLIGENCE_AI_HOOKS.md  SEMANTIC_INTERPRETATION.md
fusion_crm/docs/data-model/: CATALOG.md  WORKFLOW_READY_TIMELINE.md
fusion_crm/docs/decisions/: ADR-0000-template.md  ADR-0001-cloud-sql-prod-postgres.md  ADR-0002-cloud-run-prod-runtime.md  ADR-0003-tenant-domain-multi-tenancy.md  ADR-0004-operator-account-email-outreach.md  ADR-0005-full-fidelity-ingestion.md  ADR-0006-interactive-messenger-layer.md  ADR-0007-analytics-read-model-schema.md  README.md
fusion_crm/docs/governance/: ACCESS_POSTURE.md  TAXONOMY_GOVERNANCE.md
fusion_crm/docs/plans/: 2026-04-30-full-schema-v0_2.md  2026-04-30-salesforce-integration-design.md  2026-05-01-phase1-vertical-slice.md  2026-05-04-agent-driven-workflow-layer-integration.md  2026-05-14-prod-deploy-stabilization.md  2026-05-28-remerge-sweep-design.md
fusion_crm/infra/: AGENTS.md  CLAUDE.md
fusion_crm/infra/docker/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init-schemas.sql
fusion_crm/infra/env/: PRODUCTION.md  README.md  production.env.reference
fusion_crm/infra/scripts/: audit_identity_merges.py  backfill_actor_names.py  backfill_actors.py  backfill_bulk_import_marker.py  backfill_consultation_doctor_status.py  backfill_consultation_status.py  backfill_event_responsibility.py  backfill_lead_owner_names.py  backfill_opportunity_owner_names.py  backfill_payment_summary.py  backfill_person_dob_ssn.py  backfill_phone_match_key.py  backfill_procedure_codes.py  backfill_providers.py  backfill_sf_full_fidelity.py  backup.sh  cleanup_raw_event_duplicates.py  cloudsql_bootstrap.sh  deploy_cloud_run.sh  dev-up.sh  diagnose_funnel_linkage.py  map_location_teams.py  merge_phone_duplicate_persons.py  merge_split_lead_persons.py  preflight_prod.sh  provision_cloud_iap_lb.sh  provision_cloud_run_foundation.sh  provision_cloudsql.sh  provision_mattermost.py  provision_mattermost_cloudsql.sh  provision_mattermost_host.sh  provision_monitoring.sh  replay_treatment_procedures.py  reproject_sf_tasks.py  resolve_attribution.py  restore.sh  set_provider_mattermost.py  setup_main_ruleset.sh  split_wrong_merged_persons.py  start_prod.sh  (+3 more)
fusion_crm/tests/: _tenant_helpers.py  conftest.py
fusion_crm/tests/_fixtures/: __init__.py  workflow_ready.py
fusion_crm/tests/actor/: test_models.py  test_provider_messenger_mapping.py  test_repository.py  test_resolve_from_source.py  test_service.py
fusion_crm/tests/agent_runtime/: test_answer_schemas.py  test_service.py
fusion_crm/tests/analytics/: test_actor_performance.py  test_case_type.py  test_catalog_review_contracts.py  test_catalog_review_insight_integration.py  test_catalog_review_service.py  test_cost_allocation.py  test_cost_bottleneck.py  test_exporters.py  test_fact_builder.py  test_fact_enrichment_service.py  test_filters_dto.py  test_marketing_performance.py  (+4 more)
fusion_crm/wiki/: README.md
(+1602 files in other folders)
